# B-Project

./: .gitignore
api/endpoint/: Cargo.toml
api/endpoint/examples/: test-run.rs
api/endpoint/src/: id_generator.rs  image_endpoint.rs  lib.rs  product_endpoint.rs
api/endpoint/tmp/: N3yAk
api/run/: .env  Cargo.toml
api/run/src/: main.rs
database/: Cargo.toml
database/examples/: test-run.rs
database/migrations/2020-12-04-032531_product/: up.sql
database/migrations/2020-12-04-033349_image/: up.sql
database/migrations/2020-12-04-080350_image/: up.sql
database/migrations/2020-12-04-080511_product/: up.sql
database/migrations/2020-12-14-060409_product/: up.sql
database/src/: image_db_op.rs  lib.rs  product_db_op.rs  schema.rs  structure.rs
