[package]
name = "endpoint"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3.0"
sanitize-filename = "0.2"
futures = "0.3.1"
http = "0.2.1"
rand = "0.7.3"
actix-files = "0.4.1"

database = { path = "../../database/" }
